; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/uart/extr_uart_dev_z8530.c_uart_setmreg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/uart/extr_uart_dev_z8530.c_uart_setmreg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_bas = type { i32 }

@REG_CTRL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_bas*, i32, i32)* @uart_setmreg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uart_setmreg(%struct.uart_bas* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.uart_bas*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.uart_bas* %0, %struct.uart_bas** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %8 = load i32, i32* @REG_CTRL, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @uart_setreg(%struct.uart_bas* %7, i32 %8, i32 %9)
  %11 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %12 = call i32 @uart_barrier(%struct.uart_bas* %11)
  %13 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %14 = load i32, i32* @REG_CTRL, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @uart_setreg(%struct.uart_bas* %13, i32 %14, i32 %15)
  ret void
}

declare dso_local i32 @uart_setreg(%struct.uart_bas*, i32, i32) #1

declare dso_local i32 @uart_barrier(%struct.uart_bas*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
